--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 /* Headings */
 
 h1 {
-  @apply text-4xl leading-[3.0625rem] lg:text-6xl lg:leading-[4.75rem] 2xl:text-7xl 2xl:leading-[6.125rem] tracking-normal font-extrabold;
+  @apply text-2xl md:text-4xl md:leading-[3.0625rem] lg:text-6xl lg:leading-[4.75rem] 2xl:text-7xl 2xl:leading-[6.125rem] tracking-normal font-extrabold;
 }
 
 h2 {
