--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 /* Headings */
 
 h1 {
-  @apply text-2xl md:text-4xl md:leading-[3.0625rem] lg:text-6xl lg:leading-[4.75rem] 2xl:text-7xl 2xl:leading-[6.125rem] tracking-normal font-extrabold;
+  @apply text-2xl sm:text-[1.75rem] md:text-4xl md:leading-[3.0625rem] lg:text-6xl lg:leading-[4.75rem] 2xl:text-7xl 2xl:leading-[6.125rem] tracking-normal font-extrabold;
 }
 
 h2 {
@@ -52,7 +52,7 @@ h4 {
 }
 
 h5 {
-  @apply text-2xl leading-8 font-semibold;
+  @apply text-xl md:text-2xl md:leading-8 font-semibold;
 }
 
 h6 {
@@ -111,4 +111,8 @@ button {
 nav li {
   @apply text-link-inactive hover:text-link-active transition ease-in-out duration-300;
 
+}
+
+.text-desc-base {
+  @apply text-sm text-desc md:text-base;
 }
