--- a/src/index.css
+++ b/src/index.css
@@ -36,11 +36,11 @@
 /* Headings */
 
 h1 {
-  @apply text-2xl sm:text-[1.75rem] md:text-4xl md:leading-[3.0625rem] lg:text-6xl lg:leading-[4.75rem] 2xl:text-7xl 2xl:leading-[6.125rem] tracking-normal font-extrabold;
+  @apply text-3xl leading-10 sm:text-4xl md:text-4xl md:leading-[3.0625rem] lg:text-6xl lg:leading-[4.75rem] 2xl:text-7xl 2xl:leading-[6.125rem] tracking-normal font-extrabold;
 }
 
 h2 {
-  @apply text-xl xl:text-5xl leading-[4rem] tracking-normal font-extrabold;
+  @apply text-2xl md:text-3xl xl:text-5xl leading-[4rem] tracking-normal font-extrabold;
 }
 
 h3 {
